--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
 API_KEY=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
+DATA_PATH = "datasets/sample_data.txt"
+MAXLEN = 20
+NUM_LAYERS = 2
+EMBED_DIM = 64
+NUM_HEADS = 4
+FF_DIM = 128
+EPOCHS = 20
+BATCH_SIZE = 4
+LOCAL_CHECKPOINT_DIR = "./checkpoints"
